--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name" translatable="false">ReallyBasicVocab</string>
     <string name="app_name_short" translatable="false">R5B4 Vocab</string>
     <string name="licenses">Licenses</string>
+    <string name="licenses_emoji_project_dev" translatable="false">🧑</string>
+    <string name="licenses_emoji_project_url" translatable="false">🌐</string>
+    <string name="licenses_emoji_project_code" translatable="false">📜</string>
+    <string name="licenses_emoji_license_short" translatable="false">⚖️</string>
     <string name="settings">Settings</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
