--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="share">share</string>
     <string name="options">options</string>
     <string name="print">print</string>
+    <string name="select_all">select all</string>
+    <string name="selected">selected</string>
+    <string name="items">items</string>
     <string name="welcome_collection">Welcome. Create a new filing box (+) or import a filing box backup (↓).</string>
     <string name="welcome_pack">There are no decks in this filing box.</string>
     <string name="welcome_pack_create">Create a new deck (+).</string>
@@ -136,7 +139,7 @@
     <string name="list_stat_progress_counter_known_3">3</string>
     <string name="list_stat_progress_counter_known_4">4</string>
     <string name="list_stat_progress_counter_known_5">5+</string>
-    <string name="selected_title" translatable="false">%1$d/%2$d</string>
+    <string name="selected_title">%1$d of %2$d</string>
     <string name="print_include_headings">Include headings</string>
     <string name="print_include_progress">Include progress</string>
     <string name="print_include_notes">Include notes</string>
