nicer sort menu (ListCards)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -104,6 +104,11 @@
     <string name="sort_normal">Sortierung nach Lernfortschritt</string>
     <string name="sort_alphabetical">Alphabetische Sortierung nach Karteikarten-Vorderseite</string>
     <string name="sort_repetition">Sortiertung nach letzter Wiederholung</string>
+    <string name="sort_random_short">zufällig</string>
+    <string name="sort_normal_short">nach Lernfortschritt</string>
+    <string name="sort_alphabetical_short">alphabetisch nach Vorderseite</string>
+    <string name="sort_repetition_short">nach letzter Wiederholung</string>
+    <string name="sort_menu">Sortierung</string>
     <string name="collection_details">Karteikasten-Details</string>
     <string name="pack_details">Kartenstapel-Details</string>
     <string name="card_plus">Gewusst</string>
